@@ -1,3 +1,4 @@
+1.5.2-0 @02/05/2012 17:40:00 UTC@
 1.5.1-0 @03/19/2011 13:55:00 UTC@
 1.5.0-0 @06/19/2010 15:40:00 UTC@
 1.3.6-0 @09/26/2007 19:50:00 UTC@
