@@ -167,7 +167,7 @@ public:
     * @output x,y,z are returned in OpenGL coordinates.
     */
    virtual void getPosition(const std::string& alias, float& x, float& y,
-                            float& z);
+                            float& z) const;
 
    /**
     * set the position of the listener
@@ -177,7 +177,7 @@ public:
    /**
     * get the position of the listener
     */
-   virtual void getListenerPosition( gmtl::Matrix44f& mat );
+   virtual void getListenerPosition(gmtl::Matrix44f& mat) const;
 
 public:
    /**
