@@ -284,9 +284,10 @@ public:
     *              OpenGL coordinates).
     */
    virtual void getPosition(const std::string& alias, float& x, float& y,
-                            float& z)
+                            float& z) const
    {
-      vprASSERT(this->isStarted() == true && "must call startAPI prior to this function");
+      vprASSERT(this->isStarted() == true &&
+                "must call startAPI prior to this function");
 
       x = this->lookup( alias ).position[0];
       y = this->lookup( alias ).position[1];
@@ -310,9 +311,10 @@ public:
     *
     * @param mat Storage for returning the position of the listener.
     */
-   virtual void getListenerPosition( gmtl::Matrix44f& mat )
+   virtual void getListenerPosition(gmtl::Matrix44f& mat) const
    {
-      vprASSERT(this->isStarted() == true && "must call startAPI prior to this function");
+      vprASSERT(this->isStarted() == true &&
+                "must call startAPI prior to this function");
       mat = mListenerPos;
    }
 
@@ -429,17 +431,16 @@ public:
     */
    virtual void unbind( const std::string& alias ) = 0;
 
-   snx::SoundInfo& lookup( const std::string& alias )
-   {
-      return mSounds[alias];
-   }
+   snx::SoundInfo& lookup(const std::string& alias);
+
+   const snx::SoundInfo& lookup(const std::string& alias) const;
 
    void setName( const std::string& name )
    {
       mName = name;
    }
 
-   std::string& name()
+   const std::string& name() const
    {
       return mName;
    }
@@ -451,7 +452,9 @@ protected:
    std::string mName;
 
    snx::SoundAPIInfo mSoundAPIInfo;
-   std::map<std::string, snx::SoundInfo> mSounds;
+
+   typedef std::map<std::string, snx::SoundInfo> sound_map_t;
+   sound_map_t mSounds;
 
    gmtl::Matrix44f mListenerPos; /**< Position of the observer/listener. */
 };
