@@ -1,5 +1,7 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2012-02-05 patrick     Improve const correctness for snx::SoundHandle.
+                       NEW VERSION: 1.5.2
 2012-02-04 patrick     Replaced the Sonix DLL import/export macros with
                        SNX_API. Audio implementation plug-ins can use
                        SNX_PLUGIN_EXPORT (which no longer takes a parameter)
